fix test project reference

--- a/c#/JobTargetCodingChallangeTests/JobTargetCodingChallangeTests.csproj
+++ b/c#/JobTargetCodingChallangeTests/JobTargetCodingChallangeTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobTargetCodingChallange\JobTargetCodingChallange.csproj" />
+    <ProjectReference Include="..\JobTarget\JobTargetCodingChallange.csproj" />
   </ItemGroup>
 
   <ItemGroup>
